# c_plusplus_knu

./: CMakeLists.txt
individual_01/task_01/: task_01.cpp
individual_01/task_02/: inOleksiienko_2.txt  outOleksiienko_2.txt  task_02  task_02.cpp
individual_02/task_01 /: task_01  task_01.cpp
lab_01/task_01/: main.cpp  task_01  task_01.cpp
lab_01/task_02/: task_02  task_02.cpp
lab_01/task_03/: task_03  task_03.cpp
lab_01/task_04/: task_04  task_04.cpp
lab_01/task_05/: task_05  task_05.cpp
lab_02/task_01/: task_01  task_01.cpp
lab_02/task_02/: task_02  task_02.cpp
lab_02/task_03/: task_03  task_03.cpp
lab_02/task_04/: task_04  task_04.cpp
lab_02/task_05/: task_05  task_05.cpp
lab_03/task_01/: task_01  task_01.cpp
lab_03/task_02/: task_02  task_02.cpp
lab_03/task_03/: task_03.cpp
lab_03/task_04/: task_04.cpp
lab_03/task_05/: task_05.cpp
lab_04/task_01/: task_01  task_01.cpp
lab_04/task_02/: task_02  task_02.cpp
lab_04/task_03/: task_03  task_03.cpp
lab_04/task_04/: task_04  task_04.cpp
lab_04/task_05/: task_05  task_05.cpp
lab_05/task_01/: task_01  task_01.cpp
lab_05/task_02/: task_02  task_02.cpp
lab_05/task_03/: task_03  task_03.cpp
lab_05/task_04/: task_04  task_04.cpp
lab_05/task_05/: task_05  task_05.cpp
task_02.dSYM/Contents/: Info.plist
task_02.dSYM/Contents/Resources/DWARF/: task_02
task_03.dSYM/Contents/: Info.plist
task_03.dSYM/Contents/Resources/DWARF/: task_03
